k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: platformops-ai-service

spec:
  selector:
    app: platformops-ai

  ports:
    - port: 80
      targetPort: 5000

  type: NodePort
